-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b16
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8007169 | 8 | Zhengyu Gu | P3 | Closed | Fixed | b75 |
| JDK-8017884 | 7u45 | Zhengyu Gu | P3 | Closed | Fixed | b01 |
| JDK-8007585 | 7u40 | Zhengyu Gu | P3 | Closed | Fixed | b13 |
| JDK-8006798 | hs24 | Dmitry Mikhaylov | P3 | Closed | Fixed | b31 |
The PrintNMTStatistics flag doesn't work for normal JVM exit, works for Ctrl-C / sigint though. Turns out that print_memory_usage() is called but when trying to get the snapshot with get_snapshot() we return NULL since NMT is shutting down also.
Attaching reproducer from Filipp Zhinkin who found this issue, repro with:
java -XX:+UnlockDiagnosticVMOptions -XX:NativeMemoryTracking=detail -XX:+PrintNMTStatistics Test 5
Attaching reproducer from Filipp Zhinkin who found this issue, repro with:
java -XX:+UnlockDiagnosticVMOptions -XX:NativeMemoryTracking=detail -XX:+PrintNMTStatistics Test 5
- backported by
-
JDK-8006798 PrintNMTStatistics doesn't work for normal JVM exit
-
- Closed
-
-
JDK-8007169 PrintNMTStatistics doesn't work for normal JVM exit
-
- Closed
-
-
JDK-8007585 PrintNMTStatistics doesn't work for normal JVM exit
-
- Closed
-
-
JDK-8017884 PrintNMTStatistics doesn't work for normal JVM exit
-
- Closed
-
- relates to
-
JDK-7188594 Print statistic collected by NMT with VM flag
-
- Closed
-