8005936: PrintNMTStatistics doesn't work for normal JVM exit

Moved NMT shutdown code to JVM exit handler to ensure NMT statistics is printed when PrintNMTStatistics is enabled

Reviewed-by: acorn, dholmes, coleenp